tests/paczka1/small_fuzzy/73114812.err
Error in line 1: Ejv8G S434 7,5
Error in line 6: ZyoI S491 474,5
